Fixes auto command requirements
Co-Authored-By: Jeannrg <bobthewaterlemon@gmail.com>